# mkcg

./: CMakeLists.txt  LICENSE  README.md
include/: gro.hpp
include/mv/: conversion.cpp  exception.cpp  exception.hpp  forward.hpp  gvec.hpp  mat.cpp  mat.hpp  mat22.cpp  mat22.hpp  mat33.cpp  mat33.hpp  matvec2.hpp  mv.hpp  vec.cpp  vec.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.hpp  vecn.cpp  vecn.hpp
src/: gro.cpp  mkcg.cpp
